<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Student.ST_ElectionStatus"
    android:orientation="vertical"
    android:background="@drawable/background">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_constraint"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#2F5597">

        <ImageView
            android:id="@+id/ST_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toLeftOf="@id/toolbar_constraint"
            app:layout_constraintTop_toTopOf="@id/toolbar_constraint"
            app:layout_constraintBottom_toBottomOf="@id/toolbar_constraint"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/pageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toTopOf="@id/toolbar_constraint"
            app:layout_constraintLeft_toRightOf="@+id/ST_back"
            app:layout_constraintBottom_toBottomOf="@id/toolbar_constraint"
            android:text="Election Status"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/ST_setting"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            app:layout_constraintRight_toRightOf="@id/toolbar_constraint"
            app:layout_constraintTop_toTopOf="@id/toolbar_constraint"
            app:layout_constraintBottom_toBottomOf="@id/toolbar_constraint"
            android:src="@drawable/icon_setting" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        android:paddingTop="8dp"
        android:layout_marginBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/light_gray_background"
        android:layout_margin="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/first_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/main_constraint"
            app:layout_constraintLeft_toLeftOf="@id/main_constraint"
            app:layout_constraintRight_toRightOf="@id/main_constraint">

            <TextView
                android:id="@+id/election_name_st"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="رئيس إاتحاد الطلبة"
                android:textColor="#666666"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/first_constraint">

                <TextView
                    android:id="@+id/title_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="#2F5597"
                    android:textSize="14sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/electionDescriptionST"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners90_gray_line"
                    android:textColor="@color/black"
                    android:maxLength="500"
                    android:layout_margin="10dp"
                    android:padding="7dp"
                    android:text="descriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondesdescriptionde"/>

                <TextView
                    android:id="@+id/title_candidates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/candidates"
                    android:textColor="#2F5597"
                    android:textSize="14sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ST_RV_candidates_homepage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/row_candidate_st"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BTN_allCandidatesData_ST"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:drawableEnd="@drawable/ic_baseline_link_24"
                    android:text="All Candidates Data"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="30dp"
                    android:background="@drawable/corners90_gray_line" />


                <TextView
                    android:id="@+id/title_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="#2F5597"
                    android:textSize="14sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>

                <LinearLayout
                    android:id="@+id/ll_Election_Duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:padding="10dp"
                    android:background="@drawable/corners90_gray_line">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="10dp"
                        android:text="Election Duration"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:textColor="@color/black"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="90dp"
                            android:text="Start Date"
                            android:textSize="22sp"
                            android:textColor="#666666"/>

                        <TextView
                            android:id="@+id/startDateST"
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/corners90_gray_line"
                            android:padding="5dp"
                            android:text="22/09/2022"
                            android:textColor="#2F5597"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="110dp"
                            android:text="End Date"
                            android:textSize="22sp"
                            android:textColor="#666666"/>

                        <TextView
                            android:id="@+id/endDateST"
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:background="@drawable/corners90_gray_line"
                            android:text="25/10/2022"
                            android:textColor="#2F5597"
                            android:textSize="20sp"/>

                    </LinearLayout>
                </LinearLayout>

                    <!--vote-->

                <TextView
                    android:id="@+id/title_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vote"
                    android:textColor="#2F5597"
                    android:textSize="14sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/makeSure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Click on the candidate's name to know its number"
                    android:textColor="#666666"
                    android:textSize="10sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@drawable/corners90_gray_line"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:padding="5dp">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/minusOneST"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_baseline_horizontal_rule_24"
                        android:background="#666666"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/candidatesToVoteST"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:padding="5dp"
                        android:layout_margin="5dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/corners90_gray_line"
                        android:text="Candidates"
                        android:textColor="@color/black"
                        android:textAllCaps="false"
                        android:textSize="16sp"/>

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/addOneST"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_baseline_add_24"
                        android:background="#666666"/>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BTN_submit_vote_ST"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardView"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/blue_curved_button"
                    android:backgroundTintMode="add"
                    android:text="Submit Vote"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>